--- a/site.yml
+++ b/site.yml
@@ -17,6 +17,23 @@
       upgrade: dist
       update_cache: yes
 
+- hosts: workstations
+  become: true
+  tasks:
+
+  - name: install_unzip
+    package:
+      name: unzip
+
+  - name: install_terraform
+    unarchive:
+      src: https://releases.hashicorp.com/terraform/0.13.5/terraform_0.13.5_linux_amd64.zip
+      dest: /usr/local/bin
+      remote_src: yes
+      mode: 0755
+      owner: root
+      group: root
+
 - hosts: web_servers
   become: true
   tasks:
