add tasks to start services and manipulate file content

--- a/site.yml
+++ b/site.yml
@@ -56,6 +56,31 @@
       state: latest
     when: ansible_distribution == "CentOS"
 
+
+  - name: start httpd (CentOS)
+    tags: httpd,centos,apache
+    service:
+      name: httpd
+      state: started
+      enabled: yes
+    when: ansible_distribution == "CentOS"
+
+  - name: change e-mail address for admin
+    tags: apache,centos,httpd
+    lineinfile:
+      path: /etc/httpd/conf/httpd.conf
+      regexp: '^ServerAdmin'
+      line: ServerAdmin somebody@somewhere.net
+    when: ansible_distribution == "CentOS"
+    register: httpd
+
+  - name: restart httpd (CentOS)
+    tags: centos,httpd,apache
+    service:
+      name: httpd
+      state: restarted
+    when: httpd.changed
+
   - name: copy default html file for site
     tags: apache,apache2,httpd
     copy:
